Fixed Clipping issue on abt pg mobile view

--- a/src/components/abt pg/css/styles.css
+++ b/src/components/abt pg/css/styles.css
@@ -60,3 +60,8 @@ body {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+@media (max-width: 490px) {
+  .bodyabt {
+    margin-top: 2%;
+  }
+}
